--- a/css/helion-add-in-ecosystem.webflow.css
+++ b/css/helion-add-in-ecosystem.webflow.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f2f2f2;
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Open Sans', Arial, 'Helvetica Neue', Helvetica, sans-serif;
   color: #333;
   font-size: 14px;
   line-height: 20px;
@@ -8,8 +8,8 @@ body {
 h1 {
   margin-top: 20px;
   margin-bottom: 10px;
-  font-size: 38px;
-  line-height: 44px;
+  font-size: 24px;
+  line-height: 30px;
   font-weight: 700;
 }
 h2 {
@@ -29,11 +29,11 @@ h3 {
   font-weight: 700;
 }
 h4 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 700;
+  margin-top: 4px;
+  margin-bottom: 2px;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 500;
 }
 h5 {
   margin-top: 10px;
@@ -62,7 +62,7 @@ p {
   text-decoration: none;
 }
 .main {
-  margin-top: 0px;
+  margin-top: 60px;
   border: 1px solid #737373;
 }
 .header {
@@ -101,21 +101,21 @@ table {
   float: left;
 }
 .page-title {
-  margin-top: 90px;
+  margin-top: 20px;
   font-family: Hpsimplified, sans-serif;
   font-weight: 700;
 }
 .column-1 {
   padding-top: 15px;
   padding-bottom: 15px;
-  border: 2px solid black;
+  border: 2px solid #949494;
   border-radius: 6px;
   background: #fff;
 }
 .column-2 {
   padding-top: 15px;
   padding-bottom: 15px;
-  border: 2px dotted black;
+  border: 2px dotted #949494;
   border-radius: 6px;
   background: #fff;
 }
@@ -133,7 +133,7 @@ table {
   padding-right: 10px;
   padding-left: 10px;
   float: left;
-  border: 1px solid #d6d6d6;
+  border: 1px solid #949494;
   background-color: white;
   text-align: left;
 }
@@ -154,7 +154,7 @@ table {
 .catalog-header {
   margin-top: 10px;
   margin-bottom: 50px;
-  border: 0px solid black;
+  border: 0px solid #949494;
   font-family:'Open Sans', sans-serif;
   color: #737373;
   font-size: 16px;
@@ -227,16 +227,40 @@ table {
 }
 .togglemenu {
   position: absolute;
-  top: 0px;
+  right: -170px;
+  bottom: -225px;
+  z-index: 2;
+  display: block;
+  width: 180px;
+  height:220px;
+  margin-top: 10px;
+  border: 1px solid #949494;
+  background-color: #fff;
+  padding:5px;
+}
+
+.toggleTablemenu {
+  position: absolute;
   right: 0px;
   bottom: 0px;
   z-index: 2;
   display: block;
-  width: 130px;
-  margin-top: 60px;
-  border: 1px solid #737373;
-  background-color: #d6d4d4;
+  width: 180px;
+  height:200px;
+  margin-top: 10px;
+  border: 1px solid #949494;
+  background-color: #fff;
+  padding:5px;
 }
+
+
+
+
+.togglemenu a, .toggleTablemenu a {
+  padding:0 0 10px 0;
+}
+
+
 .action-icon {
   margin-right: 5px;
 }
@@ -285,6 +309,7 @@ html.w-mod-js *[data-ix="display-none-on-load"] {
 .tile-block-image {
   margin-top: 20px;
   text-align: center;
+  margin:0 auto;
 }
 .tab-table {
   width: 100%;
@@ -301,7 +326,7 @@ td {padding:5px 0; }
 }
 .catalog-header {
   margin-bottom: 30px;
-  border: 0px solid black;
+  border: 0px solid #949494;
 }
 .add-in-tagline {
   margin-top: 20px;
@@ -366,8 +391,10 @@ button.close-menu:focus {
 div.slide-menu-left {
     background:#fff;
     top: 0;
-    width: 300px;
+    width: 160px;
     height: 100%;
+    padding-top:75px;
+    overflow: scroll;
 }
 /*div.slide-menu-left li {
     display: block;
@@ -383,10 +410,11 @@ nav.slide-menu-left li:last-child {
 }*/
 div.slide-menu-left a {
     display: block;
+    font-size:11px;
 }
 div.slide-menu-left button.close-menu{
     margin: 10px 0;
-    padding: 10px 30px;
+    padding: 3px 6px;
    
 }
 div.slide-menu-left {
@@ -403,7 +431,7 @@ body.sml-open div.slide-menu-left {
   top: 0px;
   right: 0px;
   background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 0px 0px;
+  box-shadow: #949494 0px 1px 0px 0px;
 }
 .nav-link {
   padding: 26px 17px;
@@ -425,4 +453,8 @@ body.sml-open div.slide-menu-left {
 
 .togglemenu {background:#fff;}
 
+
+.dashboard .catalog-text {font-size:66px;text-align:center;line-height:80px;height:166px;width:166px;}
+
+a:link {color:#0096d6;text-decoration:none;}
 
