--- a/css/helion-add-in-ecosystem.webflow.css
+++ b/css/helion-add-in-ecosystem.webflow.css
@@ -69,14 +69,13 @@ p {
   position: fixed;
   z-index: 10;
   width: 100%;
-  border-style: none none solid;
-  border-width: 0px 0px 1px;
-  border-color: #737373;
-  background-color: white;
+    border: 0 none #737373;
+    border-bottom: 1px solid;
+    background-color: white;
 }
 .footer {
   margin-top: 20px;
-  padding-top: 0px;
+  padding-top: 0;
   background-color: #0096d6;
 }
 
@@ -90,9 +89,9 @@ table {
 }
 .nav-iconbar {
   position: absolute;
-  top: 0px;
+  top: 0;
   right: 30px;
-  bottom: 0px;
+  bottom: 0;
   margin-top: 16px;
   float: none;
 }
@@ -154,7 +153,7 @@ table {
 .catalog-header {
   margin-top: 10px;
   margin-bottom: 50px;
-  border: 0px solid #949494;
+  border: 0 solid #949494;
   font-family:'Open Sans', sans-serif;
   color: #737373;
   font-size: 16px;
@@ -167,18 +166,16 @@ table {
 .catalog-text {
   margin-top: 30px;
   padding-top: 10px;
-  border-top-style: solid;
-  border-top-width: 1px;
-  font-size: 12px;
+    border-top: 1px solid;
+    font-size: 12px;
 }
 .header-container {
   width: 100%;
 }
 .tab {
-  border-style: solid;
-  border-width: 0 0 1px 0;
-  border-bottom-color: #0096d6;
-  border-top-left-radius: 6px;
+    border: 0 solid;
+    border-bottom: 1px #0096d6;
+    border-top-left-radius: 6px;
   border-top-right-radius: 6px;
 }
 .nav-iconbar-image {
@@ -195,7 +192,7 @@ table {
 }
 .footer-social-icon {
   margin-right: 10px;
-  padding-right: 0px;
+  padding-right: 0;
 }
 .footer-2-text {
   padding-top: 20px;
@@ -208,18 +205,18 @@ table {
 }
 .tile-footer {
   position: absolute;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
+  left: 0;
+  right: 0;
+  bottom: 0;
   width: 100%;
   height: 45px;
   background-color: #eff0f1;
 }
 .action-dots {
   position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
+  top: 0;
+  right: 0;
+  bottom: 0;
   margin-top: 8px;
 }
 .action-link {
@@ -241,8 +238,8 @@ table {
 
 .toggleTablemenu {
   position: absolute;
-  right: 0px;
-  bottom: 0px;
+  right: 0;
+  bottom: 0;
   z-index: 2;
   display: block;
   width: 180px;
@@ -307,9 +304,8 @@ html.w-mod-js *[data-ix="display-none-on-load"] {
   text-align: left;
 }
 .tile-block-image {
-  margin-top: 20px;
-  text-align: center;
-  margin:0 auto;
+    text-align: center;
+    margin: 0 auto;
 }
 .tab-table {
   width: 100%;
@@ -326,7 +322,7 @@ td {padding:5px 0; }
 }
 .catalog-header {
   margin-bottom: 30px;
-  border: 0px solid #949494;
+  border: 0 solid #949494;
 }
 .add-in-tagline {
   margin-top: 20px;
@@ -336,9 +332,8 @@ td {padding:5px 0; }
 .catalog-text {
   margin-top: 30px;
   padding-top: 10px;
-  border-top-style: solid;
-  border-top-width: 1px;
-  font-size: 12px;
+    border-top: 1px solid;
+    font-size: 12px;
 }
 @media (max-width: 991px) {
   .navbar {
@@ -427,23 +422,23 @@ body.sml-open div.slide-menu-left {
 
 .navigation {
   position: fixed;
-  left: 0px;
-  top: 0px;
-  right: 0px;
+  left: 0;
+  top: 0;
+  right: 0;
   background-color: white;
-  box-shadow: #949494 0px 1px 0px 0px;
+  box-shadow: #949494 0 1px 0 0;
 }
 .nav-link {
   padding: 26px 17px;
-  box-shadow: transparent 0px 3px 0px 0px inset;
+  box-shadow: transparent 0 3px 0 0 inset;
   -webkit-transition: box-shadow 500ms ease, color 300ms ease;
   transition: box-shadow 500ms ease, color 300ms ease;
 }
 .nav-link:hover {
-  box-shadow: rgba(181, 181, 181, 0.49) 0px 3px 0px 0px inset;
+  box-shadow: rgba(181, 181, 181, 0.49) 0 3px 0 0 inset;
 }
 .nav-link.w--current {
-  box-shadow: #4dbd90 0px 3px 0px 0px inset;
+  box-shadow: #4dbd90 0 3px 0 0 inset;
   color: #4dbd90;
 }
 
@@ -499,7 +494,7 @@ a:link {color:#0096d6;text-decoration:none;}
   float: left;
   border: 1px solid #c9c9c9;
   background-color: white;
-  box-shadow: #737373 1px 1px 3px 0px;
+  box-shadow: #737373 1px 1px 3px 0;
 }
 .tile.tile-wide {
   width: 1140px;
@@ -519,7 +514,7 @@ a:link {color:#0096d6;text-decoration:none;}
   margin-left: auto;
 }
 .tile-header-text {
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 30px;
   padding-top: 10px;
   padding-left: 10px;
@@ -551,13 +546,13 @@ a:link {color:#0096d6;text-decoration:none;}
 }
 .tile-column-bd-graph-text {
   position: absolute;
-  left: 0px;
+  left: 0;
   top: 60px;
-  right: 0px;
+  right: 0;
   display: block;
   margin-right: auto;
   margin-left: auto;
-  padding-left: 0px;
+  padding-left: 0;
   font-family: Lato, sans-serif;
   color: #0096d6;
   font-size: 72px;
@@ -576,9 +571,9 @@ a:link {color:#0096d6;text-decoration:none;}
 }
 .tile-warning {
   position: absolute;
-  left: 0px;
-  top: 0px;
-  right: 0px;
+  left: 0;
+  top: 0;
+  right: 0;
   width: 100%;
   height: 10px;
   background-color: red;
