--- a/css/helion-add-in-ecosystem.webflow.css
+++ b/css/helion-add-in-ecosystem.webflow.css
@@ -580,3 +580,57 @@ a:link {color:#0096d6;text-decoration:none;}
 }
 
 
+
+.button.modal-next {
+  position: static;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.button-icon {
+  margin-top: 0px;
+  margin-right: 10px;
+}
+.button-text {
+  display: inline-block;
+}
+.launch-cluster-modal {
+  position: relative;
+  z-index: 2;
+  display: block;
+  width: 640px;
+  height: 480px;
+  margin-top: 50px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: white;
+}
+.modal-wizard {
+  position: absolute;
+  left: -100%;
+  top: 0px;
+  right: auto;
+  bottom: auto;
+  width: 100%;
+  height: 100%;
+  padding: 20px 20px 0px;
+  background-color: rgba(115, 115, 115, 0.89);
+  opacity: 0;
+  -webkit-transform: scale(0.08);
+  -ms-transform: scale(0.08);
+  transform: scale(0.08);
+}
+.modal-header {
+  position: relative;
+  border-bottom: 1px solid #737373;
+}
+.modal-footer {
+  background-color: #d6d6d6;
+}
+.close-modal-icon {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
