--- a/css/helion-add-in-ecosystem.webflow.css
+++ b/css/helion-add-in-ecosystem.webflow.css
@@ -56,8 +56,8 @@ p {
 .button {
   display: inline-block;
   padding: 4px 15px;
-  background-color: black;
-  color: white;
+  background-color: #0096d6;
+  color: #fff;
   text-align: center;
   text-decoration: none;
 }
@@ -682,7 +682,7 @@ html.w-mod-js *[data-ix="display-none-on-load"] {
 header.flex {
   position:fixed;
   top:0;
-  z-index:2;
+  z-index:;
   display: flex;
   align-items: center;
   width: 100%;
